--- a/supervisor/nginx/symfony.conf
+++ b/supervisor/nginx/symfony.conf
@@ -1,26 +1,23 @@
 server {
     listen 80;
     server_name symfony;
-    root /var/www/my_app/web;
+    root /var/www/my_app/public;
 
-    location / { try_files $uri /app.php$is_args$args; }
+    location / {
+        try_files $uri /index.php$is_args$args;
+    }
 
-    location ~ ^/(app_dev|config)\.php(/|$) {
+    location ~ ^/index\.php(/|$) {
         fastcgi_pass 127.0.0.1:9000;
         fastcgi_split_path_info ^(.+\.php)(/.*)$;
         include fastcgi_params;
-        fastcgi_param  SCRIPT_FILENAME  $realpath_root$fastcgi_script_name;
+        fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
         fastcgi_param DOCUMENT_ROOT $realpath_root;
-      }
+    }
 
-    location ~ ^/app\.php(/|$) {
-        fastcgi_pass 127.0.0.1:9000;
-        fastcgi_split_path_info ^(.+\.php)(/.*)$;
-        include fastcgi_params;
-        fastcgi_param  SCRIPT_FILENAME  $realpath_root$fastcgi_script_name;
-        fastcgi_param DOCUMENT_ROOT $realpath_root;
-        internal;
-      }
+    location ~ \.php$ {
+        return 404;
+    }
 
     error_log /var/log/nginx/symfony_error.log;
     access_log /var/log/nginx/symfony_access.log;
