Revert "Mise à jour supervisor"
This reverts commit ac0687010d99420c53edd68a256c27a44bf21429.

--- a/supervisor/supervisor/supervisord.conf
+++ b/supervisor/supervisor/supervisord.conf
@@ -3,7 +3,7 @@ nodaemon=true
 logfile=/var/log/supervisor/supervisord.log
 
 [program:php-fpm]
-command=/usr/sbin/php-fpm --nodaemonize -c /etc/php-fpm.d
+command=/usr/sbin/php-fpm -c /etc/php-fpm.d
 autorestart=true
 
 [program:nginx]
