--- a/supervisor/php-fpm/symfony.pool.conf
+++ b/supervisor/php-fpm/symfony.pool.conf
@@ -72,3 +72,6 @@ catch_workers_output = yes
 
 php_admin_value[error_log] = /var/log/php-fpm/symfony_error.log
 php_admin_flag[log_errors] = on
+
+php_value[session.save_handler] = files
+php_value[session.save_path] = /var/lib/php/session
