Mise à jour micro-services

--- a/micro-services/nginx/Dockerfile
+++ b/micro-services/nginx/Dockerfile
@@ -3,5 +3,5 @@ FROM nginx
 COPY nginx.conf /etc/nginx/nginx.conf
 COPY symfony.conf /etc/nginx/sites-available/
 RUN mkdir -p /etc/nginx/sites-enabled/ && \
-    mkdir -p /var/www/ && \
-    ln -s /etc/nginx/sites-available/symfony.conf /etc/nginx/sites-enabled/symfony
+    ln -s /etc/nginx/sites-available/symfony.conf /etc/nginx/sites-enabled/symfony && \
+    mkdir -p /var/www/
