--- a/docker-compose/nginx/nginx.conf
+++ b/docker-compose/nginx/nginx.conf
@@ -9,7 +9,31 @@ http {
 	  sendfile on ;
     default_type application/octet-stream;
     include /etc/nginx/mime.types;
-    include /etc/nginx/sites-enabled/*;
     access_log /var/log/nginx/access.log;
     error_log /var/log/nginx/error.log;
+
+    server {
+        listen 80;
+        server_name symfony;
+        root /var/www/my_app/public;
+
+        location / {
+            try_files $uri /index.php$is_args$args;
+        }
+
+        location ~ ^/index\.php(/|$) {
+            fastcgi_pass php:9000;
+            fastcgi_split_path_info ^(.+\.php)(/.*)$;
+            include fastcgi_params;
+            fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
+            fastcgi_param DOCUMENT_ROOT $realpath_root;
+        }
+
+        location ~ \.php$ {
+            return 404;
+        }
+
+        error_log /var/log/nginx/symfony_error.log;
+        access_log /var/log/nginx/symfony_access.log;
+    }
 }
